--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Ios Calculator</title>
   </head>
   <body>
+    <div class="container">
+      <div class="innerContainer">
+        <div class="button1 btn">1</div>
+        <div class="button2 btn">2</div>
+        <div class="button3 btn">3</div>
+        <div class="button4 btn">4</div>
+        <div class="button5 btn">5</div>
+        <div class="button6 btn">6</div>
+        <div class="button7 btn">7</div>
+        <div class="button8 btn">8</div>
+        <div class="button9 btn">9</div>
+        <div class="button10 btn">10</div>
+        <div class="button11 btn">11</div>
+        <div class="button12 btn">12</div>
+        <div class="button13 btn">13</div>
+        <div class="button14 btn">14</div>
+        <div class="button15 btn">15</div>
+        <div class="button16 btn">16</div>
+        <div class="button17 btn">17</div>
+        <div class="button18 btn">18</div>
+        <div class="button19 btn">19</div>
+        <div class="button20 btn">20</div>
+        <div class="button21 btn">21</div>
+      </div>
+    </div>
+
     <script src="App.js"></script>
   </body>
 </html>
