js mathmatical operations done

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       <div class="innerContainer">
         <button value="" class="button1 btn"></button>
         <button value="" class="button2 btn"></button>
-        <button class="operand button3 btn">AC</button>
-        <button value="±" class="operand button4 btn">±</button>
-        <button value="%" class="operand button5 btn">%</button>
+        <button value="ac" class="button3 btn">AC</button>
+        <button value="a" class="button4 btn">±</button>
+        <button value="a" class="button5 btn">%</button>
         <button value="/" class="operand button6 btn">÷</button>
         <button value="7" class="num button7 btn">7</button>
         <button value="8" class="num button8 btn">8</button>
@@ -38,10 +38,10 @@
         <button value="3" class="num button17 btn">3</button>
         <button value="+" class="operand button18 btn">+</button>
         <button value="0" class="num button19 btn">
-          <span class="btn19">0</span>
+          <span value="0" class="btn19">0</span>
         </button>
-        <button class="button20 btn">.</button>
-        <button value="=" class="operand button21 btn">=</button>
+        <button value="." class="num button20 btn">.</button>
+        <button value="=" class="button21 btn">=</button>
       </div>
     </div>
     <!-- js file  -->
