--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <button value="" class="button1 btn"></button>
         <button value="" class="button2 btn"></button>
         <button value="ac" class="button3 btn">AC</button>
-        <button value="a" class="button4 btn">±</button>
-        <button value="a" class="button5 btn">%</button>
+        <button value="" class="button4 btn">±</button>
+        <button value="%" class="operand button5 btn">%</button>
         <button value="/" class="operand button6 btn">÷</button>
         <button value="7" class="num button7 btn">7</button>
         <button value="8" class="num button8 btn">8</button>
